# RustPractice

./: .gitignore  README.md  Readme.md
all/async_delayed_call_1/: Cargo.toml
all/box_ptr/: Cargo.toml
all/closure_const_1/: Cargo.toml
all/closure_dyn_1/: Cargo.toml
all/closure_for_where_1/: Cargo.toml
all/command_trivial_1/: Cargo.toml
all/concurrency_crossbeam_scope/: Cargo.toml
all/concurrency_mutex_3/: Cargo.toml
all/concurrency_tokio_blocking_1/: Cargo.toml
all/concurrency_tokio_blocking_1/src/: problem.rs  solution.rs
all/concurrency_tokio_future_1/: Cargo.toml
all/concurrency_tokio_future_3/: Cargo.toml
all/concurrency_tokio_future_4/: Cargo.toml
all/concurrency_tokio_future_6/: Cargo.toml
all/cuncurrency_thread_mutex_1/: Cargo.toml
all/cuncurrency_thread_mutex_syncchannel/: Cargo.toml
all/dependency_version_1/: Cargo.toml
all/drop_order/: Cargo.toml
all/dyn_impl_trait/: Cargo.toml
all/error_unchaught_error_analogs_1/: Cargo.toml
all/experiment2/: Cargo.toml
all/features_intersection/: Cargo.toml
all/file_mem_cursor/: Cargo.toml
all/lib_lazy-static_2/: Cargo.toml
all/lifetime_problem_longer_1/: Cargo.toml
all/lifetime_problem_not_long_enough_1/: Cargo.toml
all/lifetime_problem_parametrized_structure_1/: Cargo.toml
all/lifetime_variance_1/: Cargo.toml
all/macro_declarative_closure/: Cargo.toml
all/macro_declarative_comma/: Cargo.toml
all/macro_declarative_for_each/: Cargo.toml
all/macro_declarative_function/: Cargo.toml
all/macro_declarative_item/: Cargo.toml
all/macro_declarative_item_2/: Cargo.toml
all/macro_declarative_macro_in_macro/: Cargo.toml
all/macro_declarative_overload/: Cargo.toml
all/macro_procedural_builder_1/: Cargo.toml
all/macro_procedural_builder_1/module/rust/builder/: Cargo.toml
all/macro_procedural_builder_1/module/rust/builder_derive/: Cargo.toml
all/macro_procedural_builder_1/module/rust/builder_runtime/: Cargo.toml
all/macro_procedural_builder_1/module/rust/former/: Cargo.toml
all/macro_procedural_builder_1/module/rust/former_derive/: Cargo.toml
all/macro_procedural_builder_1/module/rust/former_runtime/: Cargo.toml
all/macro_procedural_builder_1/rust/builder/: builder.rs  derive.rs  mod.rs  wt.rs
all/macro_procedural_builder_1/rust/builder/test/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  mod.rs
all/macro_procedural_builder_1/rust/former/: former.rs  mod.rs
all/macro_procedural_builder_1/rust/former/runtime/: mod.rs  test_framework.rs
all/macro_procedural_builder_1/rust/former/test/: full.rs  mod.rs
all/macro_procedural_builder_1/rust/test/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs  full.rs  mod.rs
all/mem_box_tree/: Cargo.toml
all/mem_ownership_cpp_1/: Cargo.toml  cpp
all/mem_relen_1/: Cargo.toml
all/mem_slice_dyn_size_1/: Cargo.toml
all/mod_absolute/: Cargo.toml
all/ownership_lifetime_strsplit_1/: Cargo.toml
all/pattern_enum_cow_2/: Cargo.toml
all/pattern_enum_cow_3/: Cargo.toml
all/pattern_trait_default_basic_1/: Cargo.toml
all/primitive_number_1/: Cargo.toml
all/problem_cfg_aliases/: Cargo.toml  build.rs  build2.rs
all/problem_closure_mut_multiple_call_solved/: Cargo.toml
all/problem_closure_mut_multiple_call_solved/src/: problem.rs  solution.rs
all/problem_closure_pass_solved/: Cargo.toml
all/problem_closure_pass_solved/img/: inversion_of_dependency.drawio
all/problem_closure_pass_solved/lesson/: Readme.md
all/problem_closure_pass_solved/src/: parameter_difference_1.rs  position_difference_1.rs  position_difference_2.rs  position_difference_3.rs  position_difference_4.rs  problem_1.rs  problem_2.rs  returning_problem_1.rs  returning_solution_1.rs  returning_solution_2.rs  solution.rs  solution_2.rs
all/problem_onwership_move_out_borrowed/: Cargo.toml  Readme.md
all/problem_onwership_move_out_borrowed/lesson/: Readme.md
all/problem_onwership_move_out_borrowed/src/: problem.rs  problem2.rs  problem3.rs  solution.rs  solution2.rs  solution2b.rs  solution3.rs  solution3b.rs
all/problem_trait_by_slice_solved/: Cargo.toml
all/problem_trait_by_slice_solved/lesson/: Readme.md  problem_00.rs  problem_01.rs  problem_05.rs
all/problem_trait_by_slice_solved/src/: main.rs
closure_kinds_1/: Cargo.toml
closure_returned_impl_1/: Cargo.toml
collection_hashmap_1/: Cargo.toml
concurrency_mutex_1/: Cargo.toml
concurrency_mutex_2/: Cargo.toml
concurrency_thread_closure_1_/: Cargo.toml
cuncurrency_thread_mpsc_1/: Cargo.toml
cuncurrency_thread_mpsc_2/: Cargo.toml
error_result_option_1/: Cargo.toml
experiment_app_size/: Cargo.toml
graphics/bevy_pong/: Cargo.toml  Trunk.toml
graphics/bevy_pong/.cargo/: config.toml
graphics/bevy_pong/src/: main.rs  x.rs
lib_lazy-static_regex_1/: Cargo.toml
macro_declarative_avec/: Cargo.toml
macro_declarative_concat_paste/: Cargo.toml
macro_declarative_for_trait/: Cargo.toml
macro_declarative_hashmap/: Cargo.toml
macro_declarative_muncher/: Cargo.toml
mem_copy_check_1/: Cargo.toml
mem_ownership_1/: Cargo.toml
mem_ownership_cpp_1/: cpp1
mem_string_clone_1/: Cargo.toml
pattern_enum_cow_bad_1/: Cargo.toml
pattern_form_basic_1/: Cargo.toml
pattern_trait_borrow_1/: Cargo.toml
pointer_box_deref_selfmade_1/: Cargo.toml
problem_generic_eq/: Cargo.toml
problem_trait_by_slice_solved/: Readme.md
routine_anonimous_1/: Cargo.toml
routine_callback_1/: Cargo.toml
routine_callback_complex_1/: Cargo.toml
routine_closure_1/: Cargo.toml
routine_generator_1/: Cargo.toml
string_operations_1/: Cargo.toml
syntax_if_1/: Cargo.toml
syntax_loop_while_comparison_1/: Cargo.toml
syntax_trait_impl_closure_1/: Cargo.toml
trait_implements_check/: Cargo.toml
(+226 files in other folders)
