[package]
name = "concurrency_tokio_blocking_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = [ "full" ] }

[[bin]]
name = "problem"
path = "src/problem.rs"

[[bin]]
name = "solution"
path = "src/solution.rs"
