[package]
name = "macro_procedural_builder_1"
version = "0.1.0"
edition = "2021"
# autotests = false
# publish = false

[lib]
proc-macro = true
name = "derive_builder"
path = "rust/builder/mod.rs"

[[example]]
name = "current"
path = "rust/test/full.rs"

[[test]]
name = "derive_builder_test"
path = "rust/test/mod.rs"

# [[test]]
# name = "tests"
# path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.52", features = ["diff"] }

[dependencies]
maplit = "1.0.2"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = {version = "1.0.81", features = ["full", "extra-traits", "parsing"] }
tracing = "0.1.29"
