[workspace]
resolver = "2"
members = [
  "module/rust/builder_derive",
  # "module/rust/builder_runtime",
  "module/rust/builder",
]
exclude = [ "*" ]
# default-members = ["module/rust/builder"]

# [package]
# name = "proc-macro-workshop"
# version = "0.0.0"
# edition = "2018"
# publish = false

# [workspace]

# [[test]]
# name = "builder_test"
# path = "rust/builder/test/mod.rs"

# # [[bin]]
# # name = "workshop"
# # path = "rust/builder/mod.rs"

# # [[bin]]
# # name = "workshop"
# # path = "rust/builder/mod.rs"

# [dev-dependencies]
# trybuild = { version = "1.0.52", features = ["diff"] }

# [dependencies]
# # bitfield = { path = "bitfield" }
# # derive_builder = { path = "builder" }
# # derive_debug = { path = "debug" }
# # seq = { path = "seq" }
# # sorted = { path = "sorted" }
# anyhow = "1.0.47"
# maplit = "1.0.2"
# # builder_derive = { path = "../builder_derive", version = "0.1.0" }
# # builder_runtime = { path = "../builder_runtime", version = "0.1.0" }
