[package]
name = "problem_onwership_move_out_borrowed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "problem"
path = "src/problem.rs"

[[bin]]
name = "solution"
path = "src/solution.rs"

[[bin]]
name = "problem2"
path = "src/problem2.rs"

[[bin]]
name = "solution2"
path = "src/solution2.rs"

[[bin]]
name = "solution2b"
path = "src/solution2b.rs"

[[bin]]
name = "problem3"
path = "src/problem3.rs"

[[bin]]
name = "solution3"
path = "src/solution3.rs"

[[bin]]
name = "solution3b"
path = "src/solution3b.rs"

[dependencies]
byte-slice-cast = "1.2.0"
owning_ref = "0.4.1"
