[package]
name = "builder_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "builder_runtime"
path = "../../../rust/builder/runtime/mod.rs"

[[test]]
name = "derive_runtime_test"
path = "../../../rust/builder/test/runtime.rs"

[dev-dependencies]
trybuild = { version = "1.0.52", features = ["diff"] }
maplit = "1.0.2"

[dependencies]
anyhow = "1.0.47"
