[package]
name = "former_runtime"
version = "0.1.0"
edition = "2021"
# autotests = false
# publish = false

# [lib]
# proc-macro = true
# name = "derive_builder"
# path = "rust/builder/mod.rs"

[lib]
# proc-macro = true
name = "former_runtime"
path = "../../../rust/former/runtime/mod.rs"

# [[example]]
# name = "current"
# path = "../../../rust/former/test/full.rs"

# [[test]]
# name = "derive_builder_test"
# path = "../../../rust/former/test/mod.rs"

# [[test]]
# name = "tests"
# path = "tests/progress.rs"

# [dev-dependencies]
# trybuild = { version = "1.0.52", features = ["diff"] }

[dependencies]
anyhow = "1.0.47"
maplit = "1.0.2"
# proc-macro-error = "1.0.4"
# proc-macro2 = "1.0.32"
# quote = "1.0.10"
# syn = {version = "1.0.81", features = ["full", "extra-traits", "parsing"] }
# tracing = "0.1.29"
# unzip-n = "0.1.2"
